# uni-sports-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  bot.py  config.py  db.py  engine.py  main.py  notifier.py  portal.py  runtime_config.py  settings.py  site.py  slots.py  telegram_api.py  telegram_control.py  translate.py
scripts/: make_avatar.py  make_mockups.py  phase0_proof.py  run_bot.py  test_engine_logic.py
